@@ -48,16 +48,16 @@ class Peak_View_Helpers
 		}
 	}
 	
+	/**
+	 * Check if $_objects key name exists
+	 *
+	 * @param  string $object_name
+	 * @return bool
+	 */
 	public function __isset($object_name)
 	{
 		return (isset($this->_objects[$object_name])) ? true : false;
 	}
-	
-	/*public function isObject($object_name)
-	{
-		return (isset($this->_objects[$object_name])) ? true : false;
-	}*/
-	
-	
+
     
 }
